<resources>
    <string name="app_name" translatable="false">Awesome Chat</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="splash" translatable="false">Splash</string>

    <!--    splash screen-->
    <string name="start_with_awesome_chat">Start with Awesome chat</string>
    <string name="awesome" translatable="false">Awesome</string>
    <string name="chat" translatable="false">chat</string>

    <!--    log in screen-->
    <string name="login">Log In</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="email_hint" translatable="false">yourname@rikkeisoft.com</string>

    <string name="forgot_password">Forgot password ?</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="sign_up_now">Sign Up</string>
    <!--   Error-->
    <string name="error" translatable="false">Opps...</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_email_invalid">Please enter correct email</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_invalid">Password must be at least 8 characters, contain at least 1 lowercase letter (a–z), 1 uppercase letter (A-Z) and 1 number from 0-9</string>
    <string name="error_user_not_found">Not found user. Please sign up.</string>
    <string name="error_email_password_invalid">Email or password invalid</string>
    <string name="error_network_not_connection">Please connect to the network to log in</string>
    <string name="error_unknown">Unknown error. Please try again later</string>
    <string name="error_user_is_exist">User is exist!</string>
    <string name="error_update">Update error! Please try again</string>

    <!--    sign up screen-->
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_hint" translatable="false">rikkeisoft</string>
    <string name="policy">I agree to the policies and terms</string>
    <string name="sign_up_error">SignUp error!</string>
    <string name="policy_1">I agree to </string>
    <string name="policy_2">the policies </string>
    <string name="policy_3">and </string>
    <string name="policy_4">terms</string>

    <string name="login_now">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm" translatable="false">OK</string>
    <string name="password_hint" translatable="false">********</string>

    <!--    Home Screen-->
    <string name="message">Message</string>
    <string name="friend">Friend</string>
    <string name="profile">Profile</string>

    <!--    Chats Screen-->
    <string name="search_message">Search messages…</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="is_yesterday">Yesterday</string>
    <string name="is_today">Today</string>
    <string name="search_friend">Search friend...</string>
    <string name="time_hint" translatable="false">11:00</string>
    <string name="create_messages">Create Messages</string>
    <string name="list_friend">List Friend</string>
    <string name="you">You: </string>
    <string name="sent_picture">Sent a picture</string>
    <string name="sent_sticker">Sent a sticker</string>

    <!--    Friend Screen-->
    <string name="all_friend">All</string>
    <string name="pending_friend">Request</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_friend">Confirm</string>
    <string name="add_friend">Add</string>
    <string name="sending_friend">Friend request</string>
    <string name="receive_friend">Sent friend</string>
    <string name="change_title">Change</string>
    <string name="change_body">Do you want to unsend this friend request?</string>
    <string name="decline">Decline</string>
    <string name="not_found">Not found</string>
    <string name="sent_add_friend">Sent a friend request</string>
    <string name="agree_to_be_friend">Agree to be a friend</string>

    <!--    Profile Screen-->
    <string name="log_out">Log out</string>
    <string name="language">Language</string>
    <string name="language_app">English</string>
    <string name="language_vi" translatable="false">Tiếng Việt</string>
    <string name="language_en" translatable="false">English</string>
    <string name="notification">Notification</string>
    <string name="version">Version</string>
    <string name="version_number" translatable="false">1.0.0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="error_phone_number">PhoneNumber must be 10 numbers, start by 0</string>
    <string name="format_date_ddMMyyyy" translatable="false">dd-MM-yyyy</string>

    <!--    Message Screen-->
    <string name="hint_message">Enter a message...</string>
    <string name="send">Send</string>

    <!--    Notification-->
    <string name="new_message">You have a new Message</string>
    <string name="sent">Sent:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery_image" translatable="false">Gallery Image</string>


</resources>