<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_25">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginTop="@dimen/margin_item_40"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/primary_color"
            android:contentDescription="@string/login" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            style="@style/text_bold_32"
            android:layout_marginTop="@dimen/margin_item_50"
            android:textColor="@color/primary_color"
            app:layout_constraintTop_toBottomOf="@id/iv_back"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="@dimen/text_size_14"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/margin_item_60"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up"/>

        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edt_login"
            android:drawableEnd="@drawable/ic_user"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            android:hint="@string/name_hint"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/text_size_14"
            android:layout_marginTop="@dimen/margin_item_40"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/edt_fullname"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edt_login"
            android:drawableEnd="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/black"
            android:hint="@string/email_hint"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/text_size_14"
            android:layout_marginTop="@dimen/margin_item_40"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/edt_email"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edt_login"
            android:drawableEnd="@drawable/ic_key"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_18"
            android:hint="@string/password_hint"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            android:autofillHints="" />

        <LinearLayout
            android:id="@+id/linear_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:layout_marginTop="@dimen/margin_item_25"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            app:layout_constraintStart_toStartOf="parent">
            <CheckBox
                android:button="@drawable/custom_checkbox"
                android:id="@+id/cb_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:layout_marginStart="@dimen/margin_item_12"
                android:text="@string/policy_1"
                android:layout_marginEnd="@dimen/margin_item_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_bold_14"
                android:textColor="@color/primary_color"
                android:text="@string/policy_2"
                android:layout_marginEnd="@dimen/margin_item_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14"
                android:text="@string/policy_3"
                android:layout_marginEnd="@dimen/margin_item_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_bold_14"
                android:textColor="@color/primary_color"
                android:text="@string/policy_4"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_item_60"
            android:clickable="false"
            style="@style/text_bold"
            android:background="@drawable/bg_button_disable"
            app:layout_constraintTop_toBottomOf="@id/linear_policy"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_item_18"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:gravity="center"
                android:layout_marginEnd="@dimen/margin_item_3"/>
            <TextView
                android:id="@+id/tv_go_to_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_now"
                android:textColor="@color/primary_color"
                style="@style/text_bold_14"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
