<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/primary_color"
        tools:context=".ui.chats.ChatsFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintDimensionRatio="1:0.6"
            android:background="@drawable/background_app_common"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

        </FrameLayout>

        <LinearLayout
            android:id="@+id/linear_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_item_40"
            android:layout_marginHorizontal="@dimen/margin_item_12"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                app:tint="@color/white"
                android:contentDescription="@string/login" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                style="@style/text_bold_18"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/save"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/white"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_white_top_radius"
            android:layout_marginTop="@dimen/margin_item_25"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/linear_header"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">
        </FrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/size_156"
            android:layout_height="@dimen/size_156"
            android:layout_marginTop="@dimen/margin_item_50"
            app:shapeAppearance="@style/circle"
            android:src="@drawable/ic_avatar_default"
            android:padding="@dimen/padding_13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/frame_background"/>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_edit_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="@id/iv_avatar"/>
        
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar"
            android:textAllCaps="true"
            android:layout_margin="@dimen/margin_item_25"
            android:textSize="@dimen/text_size_12"/>

        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edt_login"
            android:drawableEnd="@drawable/ic_user"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            android:hint="@string/name_hint"
            android:layout_marginHorizontal="@dimen/margin_item_25"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            app:layout_constraintTop_toBottomOf="@id/edt_fullname"
            android:textAllCaps="true"
            android:layout_margin="@dimen/margin_item_25"
            android:textSize="@dimen/text_size_12"/>

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edt_login"
            android:drawableEnd="@drawable/ic_call"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            android:hint="091 234 5678"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
            android:layout_marginHorizontal="@dimen/margin_item_25"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            app:layout_constraintTop_toBottomOf="@id/edt_phone_number"
            android:textAllCaps="true"
            android:layout_margin="@dimen/margin_item_25"
            android:textSize="@dimen/text_size_12"/>

        <EditText
            android:id="@+id/edt_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edt_login"
            android:drawableEnd="@drawable/ic_birthday"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            android:hint="08/04/1992"
            app:layout_constraintTop_toBottomOf="@id/tv_date_of_birth"
            android:layout_marginHorizontal="@dimen/margin_item_25"
            android:autofillHints="" />

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:src="@drawable/ic_bubble"
            android:layout_marginTop="161dp"
            android:layout_marginStart="74dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="11dp"
            android:layout_height="11dp"
            android:src="@drawable/ic_bubble"
            android:layout_marginTop="204dp"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_bubble"
            android:layout_marginTop="237dp"
            android:layout_marginStart="75dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:src="@drawable/ic_bubble"
            android:layout_marginTop="268dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_bubble"
            android:layout_marginTop="164dp"
            android:layout_marginEnd="@dimen/margin_item_50"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

